# fixed-vectors

./: Cargo.toml  README.MD
.github/workflows/: publish.yml  verify.yml
examples/: custom_vector.rs  tuplable_vector.rs  voxel.rs
src/: lib.rs  macros.rs  tests.rs  traits.rs  vector2.rs  vector3.rs
src/macros/: floating.rs  mod.rs  operators.rs
