[package]
name = "fixed-vectors"
readme = "README.MD"
version = "3.0.0"
edition = "2021"
license = "MIT"

description = "Library implementing fixed-length Vectors meant for representing dimensional values."
categories = [ "data-structures", "game-development", "mathematics" ]
keywords = [ "math", "vector", "vector2", "vector3", "gamedev" ]
repository = "https://github.com/c1m50c/fixed-vectors"