[package]
name = "fixed-vectors"
readme = "README.MD"
version = "3.2.2"
edition = "2021"
license = "MIT"

description = "Lightweight library implementing fixed-length vectors for Rust applications not compiled with the standard library."
categories = [ "data-structures", "game-development", "mathematics" ]
keywords = [ "math", "vector", "vector2", "vector3", "no_std" ]
repository = "https://github.com/c1m50c/fixed-vectors"


[dependencies]
num-traits = { version = "0.2.15", default-features = false }
libm = "0.2.6"